PluggableAuthService changelog
==============================

PluggableAuthService 1.5.4 (Unreleased)
---------------------------------------

- Ensure the _findUser cache is invalidated if the roles or groups for
  a principal change.

- Launchpad #15569586:  docstring fix.

- Ensure ZODBRoleManagerExportImport doesn't fail if it tries to add a
  role that already exists (idempotence is desirable in GS importers)


PluggableAuthService 1.5.3 (2008-02-06)
---------------------------------------

- ZODBUserManager plugin:  allow unicode arguments to 'enumerateUsers'.
  (https://bugs.launchpad.net/zope-pas/+bug/189627)

- plugins/ZODBRoleManager: added logging in case searchPrincipial()
  returning more than one result (which might happen in case of 
  having duplicate id within difference user sources)


PluggableAuthService 1.5.2.1 (2007-12-07)
-----------------------------------------

- Packaging error:  the 1.5.2 distribution was made from an
  'svn export', and thus was missing package data files.


PluggableAuthService 1.5.2 (2007-11-28)
---------------------------------------

- DomainAuthHelper plugin:  fix glitch for plugins which have never
  configured any "default" policy:  'authenticateCredentials' and
  'getRolesForPrincipal' would raise ValueError.
  (http://www.zope.org/Collectors/PAS/59)


PluggableAuthService 1.5.1 (2007-09-11)
---------------------------------------

- PluggableAuthService._verifyUser: changed to use exact_match to the 
  enumerator, otherwise a user with login 'foobar' might get returned 
  by _verifyUser for a query for login='foo' because the enumerator 
  happened to return 'foobar' first in the results.

- Add a test for manage_zmi_logout and replace a call to isImplementedBy
  with providedBy.
  (http://www.zope.org/Collectors/PAS/58)


PluggableAuthService 1.5 (2007-06-17)
-------------------------------------

- Add support for property plugins returning an IPropertySheet